feat: integrate Resend for email functionality and update environment configuration

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
 # Email configuration for newsletter
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password
+# Legacy email config (no longer used)
+# EMAIL_USER=your-email@gmail.com
+# EMAIL_PASS=your-app-password
+
+# Resend email configuration
+RESEND_API_KEY=your-resend-api-key
+FROM_EMAIL=newsletter@rohankhatua.dev
 
 # App configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
-
 DATABASE_URL="file:./dev.db"
