--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@radix-ui/react-toggle": "^1.1.1",
 		"@radix-ui/react-toggle-group": "^1.1.1",
 		"@radix-ui/react-tooltip": "^1.1.6",
+		"@tailwindcss/typography": "^0.5.16",
 		"@tanstack/react-virtual": "^3.13.6",
 		"@types/node-cron": "^3.0.11",
 		"@types/nodemailer": "^6.4.17",
