--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@radix-ui/react-toggle": "^1.1.1",
 		"@radix-ui/react-toggle-group": "^1.1.1",
 		"@radix-ui/react-tooltip": "^1.1.6",
+		"@react-email/components": "^0.0.36",
 		"@tailwindcss/typography": "^0.5.16",
 		"@tanstack/react-virtual": "^3.13.6",
 		"@types/node-cron": "^3.0.11",
@@ -59,6 +60,7 @@
 		"react": "^19",
 		"react-day-picker": "8.10.1",
 		"react-dom": "^19",
+		"react-email": "^4.0.7",
 		"react-hook-form": "^7.54.1",
 		"react-intersection-observer": "^9.16.0",
 		"react-resizable-panels": "^2.1.7",
