--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"postinstall": "prisma generate"
 	},
 	"dependencies": {
+		"@auth/prisma-adapter": "^2.9.0",
 		"@hookform/resolvers": "^3.9.1",
+		"@next-auth/prisma-adapter": "^1.0.7",
 		"@prisma/client": "^6.6.0",
 		"@radix-ui/react-accordion": "^1.2.2",
 		"@radix-ui/react-alert-dialog": "^1.1.4",
@@ -45,6 +47,7 @@
 		"@types/node-cron": "^3.0.11",
 		"@types/nodemailer": "^6.4.17",
 		"autoprefixer": "^10.4.20",
+		"bcrypt": "^5.1.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.4",
@@ -54,6 +57,7 @@
 		"input-otp": "1.4.1",
 		"lucide-react": "^0.454.0",
 		"next": "15.2.4",
+		"next-auth": "^4.24.11",
 		"next-themes": "^0.4.4",
 		"node-fetch": "^3.3.2",
 		"nodemailer": "^6.10.1",
@@ -73,6 +77,7 @@
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
 		"@types/node": "^22",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
