feat: protect API route

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,6 @@
-# Email configuration for newsletter
-# Legacy email config (no longer used)
-# EMAIL_USER=your-email@gmail.com
-# EMAIL_PASS=your-app-password
-
-# Resend email configuration
-RESEND_API_KEY=your-resend-api-key
-FROM_EMAIL=newsletter@rohankhatua.dev
-
-# App configuration
+RESEND_API_KEY=
+FROM_EMAIL=
 NEXT_PUBLIC_APP_URL=http://localhost:3000
-DATABASE_URL="file:./dev.db"
+DATABASE_URL=
+NEXTAUTH_SECRET=
+NEWSLETTER_API_KEY=
