--- a/.github/workflows/daily-newsletter.yml
+++ b/.github/workflows/daily-newsletter.yml
@@ -12,5 +12,5 @@ jobs:
     steps:
       - name: Trigger newsletter API
         run: |
-          curl -X GET https://${{ secrets.APP_DOMAIN }}/api/send-newsletter
-        
+          curl -X GET https://${{ secrets.APP_DOMAIN }}/api/send-newsletter \
+            -H "x-api-key: ${{ secrets.NEWSLETTER_API_KEY }}"
